--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -35,13 +35,11 @@
 
         <ImageView
             android:id="@+id/bookAppointment_icon_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_75sdp"
+            android:layout_height="@dimen/_75sdp"
             android:src="@drawable/ic_clock1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/appBarLayout" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
@@ -70,15 +68,15 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="78dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/BookAppointment_TextView_top"
             android:textColor="@color/white"
-            android:textSize="@dimen/_18ssp"
-            app:layout_constraintBottom_toBottomOf="@+id/bookAppointment_icon_user"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/bookAppointment_icon_user"
-            app:layout_constraintTop_toTopOf="@+id/bookAppointment_icon_user" />
+            android:textSize="@dimen/_14ssp"
+            app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintEnd_toStartOf="@+id/bookAppointment_icon_user"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/appBarLayout" />
 
         <LinearLayout
             android:id="@+id/container11"
