--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -34,8 +34,8 @@
 
         <ImageView
             android:id="@+id/activityRegister_icon_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_75sdp"
+            android:layout_height="@dimen/_75sdp"
             android:src="@drawable/ic_assignment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,14 +43,15 @@
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="230dp"
-            android:layout_height="106dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/UserProfile_TextView_welcome"
             android:textColor="@color/white"
             android:textSize="@dimen/_22ssp"
             app:layout_constraintBottom_toBottomOf="@+id/activityRegister_icon_user"
             app:layout_constraintEnd_toStartOf="@+id/activityRegister_icon_user"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/activityRegister_icon_user" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
