--- a/app/src/main/res/layout/fragment_available_appointments_doctor.xml
+++ b/app/src/main/res/layout/fragment_available_appointments_doctor.xml
@@ -38,8 +38,8 @@
 
                 <TextView
                     android:id="@+id/t1"
-                    android:layout_width="194dp"
-                    android:layout_height="42dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/AppointmentFragment_TextView_Welcome"
                     android:textColor="#fff"
                     android:textSize="@dimen/_24ssp"
@@ -58,7 +58,7 @@
                     android:letterSpacing="0.04"
                     android:text="@string/AppointmentFragment_TextView_Appointment"
                     android:textColor="#fff"
-                    android:textSize="28dp"
+                    android:textSize="@dimen/_24ssp"
                     app:layout_constraintEnd_toEndOf="@+id/t1"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/t1"
@@ -66,8 +66,8 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="@dimen/_70sdp"
+                    android:layout_height="@dimen/_70sdp"
                     android:src="@drawable/profile"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -79,8 +79,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container111"
-                android:layout_width="385dp"
-                android:layout_height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,19 +91,20 @@
                     android:id="@+id/imageView9"
                     android:layout_width="@dimen/_120sdp"
                     android:layout_height="@dimen/_122sdp"
-                    android:src="@drawable/ic_undraw_mobile"
                     android:layout_marginRight="@dimen/_5sdp"
+                    android:src="@drawable/ic_undraw_mobile"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textView14"
-                    android:layout_width="234dp"
-                    android:layout_height="138dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingLeft="40dp"
                     android:paddingTop="50dp"
-                    android:text="@string/dashboard_user_image_top_TextView"                    android:textColor="#fff"
+                    android:text="@string/dashboard_user_image_top_TextView"
+                    android:textColor="#fff"
                     android:textSize="@dimen/_24ssp"
                     app:layout_constraintEnd_toEndOf="@+id/textView13"
                     app:layout_constraintStart_toStartOf="@+id/textView13"
@@ -120,8 +121,7 @@
                     android:textColor="#fff"
                     android:textSize="35dp"
                     android:textStyle="bold"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView9"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -255,11 +255,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-black"
-                    android:letterSpacing="0.02"
                     android:gravity="center"
+                    android:letterSpacing="0.02"
                     android:text="@string/PatientAppointmentFragment_TextView_Appointment"
                     android:textColor="#516b9e"
-                    android:textSize="25dp"
+                    android:textSize="@dimen/_18ssp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -295,14 +295,14 @@
 
                     <TextView
                         android:id="@+id/tt1"
-                        android:layout_width="216dp"
-                        android:layout_height="77dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_10sdp"
                         android:fontFamily="sans-serif-black"
                         android:letterSpacing="0.03"
                         android:text="@string/AppointmentFragment_TextView_NEWAppointment1"
                         android:textColor="@color/white"
-                        android:textSize="25dp"
+                        android:textSize="@dimen/_16ssp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/view33"
@@ -355,15 +355,15 @@
 
                     <TextView
                         android:id="@+id/tt11"
-                        android:layout_width="216dp"
-                        android:layout_height="77dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_10sdp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center"
                         android:letterSpacing="0.03"
                         android:text="@string/AppointmentFragment_TextView_ShowAppointment1"
                         android:textColor="@color/white"
-                        android:textSize="25dp"
+                        android:textSize="@dimen/_16ssp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/view3"
