--- a/app/src/main/res/layout/fragment_dashboard_doctor.xml
+++ b/app/src/main/res/layout/fragment_dashboard_doctor.xml
@@ -39,8 +39,8 @@
 
                 <TextView
                     android:id="@+id/t1"
-                    android:layout_width="194dp"
-                    android:layout_height="42dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/AppointmentFragment_TextView_Welcome"
                     android:textColor="#fff"
                     android:textSize="@dimen/_24ssp"
@@ -79,8 +79,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container111"
-                android:layout_width="385dp"
-                android:layout_height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -93,15 +93,15 @@
                     android:layout_width="@dimen/_120sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:src="@drawable/ic_undraw_mobile"
                     android:layout_marginRight="@dimen/_5sdp"
+                    android:src="@drawable/ic_undraw_mobile"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textView14"
-                    android:layout_width="234dp"
-                    android:layout_height="138dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingLeft="40dp"
                     android:text="@string/AppointmentFragment_TextView_Appointment1"
@@ -123,9 +123,9 @@
                     android:textSize="@dimen/_20ssp"
                     android:textStyle="bold"
                     app:layout_constraintHorizontal_bias="0.634"
-                    app:layout_constraintRight_toLeftOf="@+id/imageView9"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintRight_toLeftOf="@+id/imageView9"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -208,20 +208,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textV"
-                        android:layout_width="101dp"
-                        android:layout_height="83dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboardDoctor_TextView_appointment2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO1"
-                        app:layout_constraintStart_toEndOf="@+id/image_appointment"
-                        app:layout_constraintTop_toTopOf="@+id/image_appointment"  />
                     <ImageView
                         android:id="@+id/image_appointment"
                         android:layout_width="@dimen/_70sdp"
@@ -284,8 +270,8 @@
 
                     <TextView
                         android:id="@+id/textView33"
-                        android:layout_width="@dimen/_170sdp"
-                        android:layout_height="37dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/ic_icontimenav"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="sans-serif-smallcaps"
@@ -298,21 +284,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textVV"
-                        android:layout_width="@dimen/_90sdp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_appointment1"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_16ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO2"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment2"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment2" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -366,8 +337,8 @@
 
                     <TextView
                         android:id="@+id/textView3333"
-                        android:layout_width="@dimen/_170sdp"
-                        android:layout_height="37dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/ic_report2red"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="sans-serif-smallcaps"
@@ -380,21 +351,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textVVV"
-                        android:layout_width="104dp"
-                        android:layout_height="78dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_Doctor_cardView_TextView_MedicalReport2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO3"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment3"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment3" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -450,8 +406,8 @@
 
                     <TextView
                         android:id="@+id/textView33333"
-                        android:layout_width="@dimen/_170sdp"
-                        android:layout_height="37dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/ic_icon_user1"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="sans-serif-smallcaps"
@@ -463,23 +419,6 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/textVVVV"
-                        android:layout_width="101dp"
-                        android:layout_height="83dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_Profile2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO4"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment4"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment4" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
