--- a/app/src/main/res/layout/fragment_dashboard_user.xml
+++ b/app/src/main/res/layout/fragment_dashboard_user.xml
@@ -30,8 +30,8 @@
                 android:textColor="#fff"
                 android:textSize="@dimen/_20ssp"
                 app:layout_constraintBottom_toTopOf="@+id/textView12"
-                app:layout_constraintEnd_toStartOf="@+id/imageView6"
-                app:layout_constraintStart_toStartOf="@+id/textView13"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
             <TextView
@@ -43,7 +43,7 @@
                 android:letterSpacing="0.04"
                 android:text="@string/dashboard_user_image_top_TextView"
                 android:textColor="#fff"
-                android:textSize="@dimen/_24ssp"
+                android:textSize="@dimen/_22ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/t1" />
@@ -77,7 +77,7 @@
                 android:paddingTop="10dp"
                 android:text="2021/07/09"
                 android:textColor="#fff"
-                android:textSize="@dimen/_22ssp"
+                android:textSize="@dimen/_20ssp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,22 +163,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textV"
-                        android:layout_width="101dp"
-                        android:layout_height="83dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_appointment2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO1"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment" />
-
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -246,21 +230,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textVV"
-                        android:layout_width="80dp"
-                        android:layout_height="81dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_show_appointment2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO2"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment2"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment2" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -313,35 +282,20 @@
 
                     <TextView
                         android:id="@+id/textView3333"
-                        android:layout_width="@dimen/_170sdp"
-                        android:layout_height="37dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/ic_report2red"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="sans-serif-smallcaps"
                         android:gravity="center"
                         android:text="@string/dashboard_user_cardView_TextView_MedicalReport1"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/_24ssp"
+                        android:textSize="@dimen/_18ssp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textVVV"
-                        android:layout_width="101dp"
-                        android:layout_height="83dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_MedicalReport2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO3"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment3"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment3" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -393,35 +347,20 @@
 
                     <TextView
                         android:id="@+id/textView33333"
-                        android:layout_width="@dimen/_170sdp"
-                        android:layout_height="37dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableEnd="@drawable/ic_icon_user1"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="sans-serif-smallcaps"
                         android:gravity="center"
                         android:text="@string/dashboard_user_cardView_TextView_Profile1"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/_24ssp"
+                        android:textSize="@dimen/_18ssp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textVVVV"
-                        android:layout_width="101dp"
-                        android:layout_height="83dp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:text="@string/dashboard_user_cardView_TextView_Profile2"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_18ssp"
-                        android:textStyle="bold"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/img_GOTO4"
-                        app:layout_constraintStart_toEndOf="@+id/img_appointment4"
-                        app:layout_constraintTop_toTopOf="@+id/img_appointment4" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
