--- a/app/src/main/res/layout/header_nav.xml
+++ b/app/src/main/res/layout/header_nav.xml
@@ -6,45 +6,17 @@
     android:layout_height="@dimen/_150sdp"
     android:background="@color/colorPrimaryDark">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView"
-        android:layout_width="@dimen/_70sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:background="@drawable/shap_register_imgv_user"
-        android:padding="@dimen/_3sdp"
-        android:src="@drawable/img9"
-        app:layout_constraintBottom_toTopOf="@+id/textViewHeaderName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewHeaderEmail"
+    <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="email"
-        android:textSize="@dimen/_16ssp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/andika"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderName"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/textViewHeaderName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderName" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_undraw_drag" />
 
-    <TextView
-        android:id="@+id/textViewHeaderName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:textSize="@dimen/_20ssp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/andika"
-        app:layout_constraintBottom_toTopOf="@+id/textViewHeaderEmail"
-        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/circleImageView"
-        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
