--- a/app/src/main/res/values-ar/string.xml
+++ b/app/src/main/res/values-ar/string.xml
@@ -3,7 +3,7 @@
     <string name="app_name">PDS</string>
 
     <!--    activityLogin-->
-    <string name="activityLogin_txt_tolbar">مرحبا بك في تطبيق خدمات المرضى </string>
+    <string name="activityLogin_txt_tolbar"> تطبيق خدمات المرضى </string>
     <string name="activityLogin_EitText_email">البريد الإلكتروني</string>
     <string name="activityLogin_EitText_password">كلمة المرور</string>
     <string name="activityLogin_Button_login">دخول</string>
@@ -24,18 +24,11 @@
     <string name="dashboard_user_image_top_TextView">تطبيق PDS</string>
 
     <string name="dashboard_user_cardView_TextView_appointment1">المـــواعيـــــــد</string>
-    <string name="dashboard_user_cardView_TextView_appointment2"> إدارة مواعيدك</string>
-
     <string name="dashboard_user_cardView_TextView_show_appointment">عرض المواعيد</string>
     <string name="dashboard_user_cardView_TextView_show_appointment2">المواعيد المتاحة</string>
-
     <string name="dashboard_user_cardView_TextView_MedicalReport1"> التقارير الطبية</string>
-    <string name="dashboard_user_cardView_TextView_MedicalReport2">عرض تقاريري</string>
 
-    <string name="dashboard_Doctor_cardView_TextView_MedicalReport2">اضافة تقرير لمريض</string>
 
-    <string name="dashboard_user_cardView_TextView_Profile1">ملفي الطبي</string>
-    <string name="dashboard_user_cardView_TextView_Profile2">عرض الملف</string>
 
     <!--    chooseDoctor-->
     <string name="chooseDoctor_TextView_doctorName">اسم الطبيب</string>
@@ -63,7 +56,7 @@
     <string name="activityNewDoctor_EitText_About_the_doctor">نبذة عن الطبيب</string>
 
     <!--    BookAppointment-->
-    <string name="BookAppointment_TextView_top">قم باختيار تاريخ ووقت الموعد من الموااعيد الطبيب المتاحة </string>
+    <string name="BookAppointment_TextView_top">قم بإختيار معلومات الموعد </string>
     <string name="BookAppointment_EitText_reasonAppointment">سبب الموعد</string>
     <string name="BookAppointment_EitText_DateAppointment">تاربخ الموعد</string>
     <string name="BookAppointment_EitText_TimeAppointment">وقت الموعد</string>
@@ -75,7 +68,7 @@
     <string name="ShowAppointmentUse_textView_appointment_date">تاريخ الموعد:</string>
     <string name="textView_appointment_Time">وقت الموعد:</string>
     <string name="ShowAppointmentUser_textView_appointment_description">وصف موجز:</string>
-    <string name="ShowAppointmentUser_textView_ToolbarAppointment">يمكنك الإطلاع على المواعيد التي قمت بحجزها</string>
+    <string name="ShowAppointmentUser_textView_ToolbarAppointment"> الإطلاع على المواعيد  </string>
     <string name="ShowAppointmentUser_btn_doctorViewInfo">عرض معلومات اضافية</string>
     <string name="ShowAppointmentUser_btn_doctorViewInfo2">اخفاء معلومات اضافية عن الموعد</string>
 
@@ -84,13 +77,13 @@
     <string name="dashboardDoctor_TextView_appointment2"> إدارة مواعيدك</string>
 
 <!--    AvailableAppointmentsActivity-->
-    <string name="AvailableAppointmentsActivity_TextView_topView">اهلن بك في قائمة اختيار المواعيد المتاحة</string>
+    <string name="AvailableAppointmentsActivity_TextView_topView"> المواعيد المتاحة</string>
     <string name="AvailableAppointmentsActivity_TextView_container">المواعيد المتاحة</string>
     <string name="AvailableAppointmentsActivity_Button_AddDate">اضافة تاريخ الموعد</string>
     <string name="AvailableAppointmentsActivity_Button_AddTime">اضافة تاريخ الموعد</string>
 
     <!--  ChooosAvailableAppointmentsActivity-->
-    <string name="ChooseAvailableAppointmentsActivity_TextView_topView">يمكنك اختيار موعد من قائمة مواعيد الطبيب المتاحة </string>
+    <string name="ChooseAvailableAppointmentsActivity_TextView_topView">يمكنك اختيار موعد  </string>
     <string name="ChooseAvailableAppointmentsActivity_TextView_date">التاريخ: </string>
     <string name="ChooseAvailableAppointmentsActivity_TextView_time">التوقيت:</string>
 
@@ -115,9 +108,10 @@
     <!--    Patient Appointment Fragment-->
     <string name="PatientAppointmentFragment_TextView_Welcome">مرحبا بك في</string>
     <string name="PatientAppointmentFragment_TextView_Appointment">المـــــواعـــيــــــد</string>
-    <string name="PatientAppointmentFragment_TextView_Appointment1">أضف مواعيدك</string>
     <string name="PatientAppointmentFragment_TextView_NEWAppointment1">اضافة موعد جديد</string>
     <string name="PatientAppointmentFragment_TextView_ShowAppointment1">عـرض مواعــيدي</string>
+    <string name="dashboard_user_cardView_TextView_Profile1">ملفي الشخصي</string>
+
 
     <!--    doctor Appointment Fragment-->
     <string name="AppointmentFragment_TextView_Welcome">مرحبا بك في</string>
